# MultiscaleRun

./: .clear_setup.sh  .flake8  .gitignore  .gitlab-ci.yml  .julia  .julia_environment  .readthedocs.yaml  .setup_bloodflow.sh  .setup_julia.sh  .setup_python_venv.sh  .setup_spackenv.sh  .utils.sh  BlueConfig  BlueConfig.bkp  BlueConfig.worked  BlueConfigCI  CONTRIBUTING.md  README.md  bloodflow_params.yaml  circuit_config.json  config.py  job_script  main.py  multiscale_run_STEPS3.py  multiscale_run_STEPS4.py  ngv.json  node_sets.json  notebook.ipynb  params.py  postproc.ipynb  pyproject.toml  removeme.py  run_ratV10.slurm  run_ratV6.slurm  set_env.sh  setup.sh  setup_env.sh  setup_quick.sh  simulation.sbatch  simulation_config.json  (+7 more)
.ci/: load.sh  setup.sh  test.sh  test_dualrun.sh  test_dualrun_results.py  test_init_julia_create.sh  test_integration.sh  test_pytest.sh  test_simulation.sh  test_triplerun.sh  test_triplerun_results.py
.github/workflows/: publish.yml  test.yml
bluepy_prep4circuit/: get_gids_lists.ipynb  mc2_Column_target.txt  testL5tpcaChc_target.txt
bluepy_prep4circuit/.ipynb_checkpoints/: get_gids_lists-checkpoint.ipynb  mc2_Column_target-checkpoint.txt  testL5tpcaChc_target-checkpoint.txt
configs/: mr_config.json  mr_config.py
configs/mesh/: README.md
configs/rat_old/: simulation_config.json
configs/rat_sscxS1HL_V6/: simulation_config.json
debug_data/: circuit_config.json  node_sets.json  simulation_config.json
docs/: bb5.rst  conf.py  contributing.rst  index.rst  modules.rst  multiscale_run.rst  quadrun.graphml  simulation_config.rst
emodels_atp_1p4_patched/: bAC_L23BTC.hoc  bAC_L6BTC.hoc  bIR_L23BP.hoc  bIR_L23BTC.hoc  bIR_L4BP.hoc  bIR_L4BTC.hoc  bIR_L4DBC.hoc  bIR_L5BP.hoc  bIR_L5DBC.hoc  bNAC_L23NGC.hoc  bNAC_L23SBC.hoc  bSTUT_L5NBC.hoc  cACint_L23MC.hoc  cACint_L4CHC.hoc  cADpyr_L2IPC.hoc  cADpyr_L2TPC.hoc  cADpyr_L3TPC.hoc  cADpyr_L4TPC.hoc  cADpyr_L4UPC.hoc  cADpyr_L5TPC.hoc  cADpyr_L6BPC.hoc  cADpyr_L6HPC.hoc  cADpyr_L6IPC.hoc  cADpyr_L6UPC.hoc  cIR_L2SBC.hoc  cIR_L4DBC.hoc  cIR_L5DBC.hoc  cNAC_L23BTC.hoc  cNAC_L23NGC.hoc  cNAC_L4CHC.hoc  cNAC_L6BTC.hoc  cNAC_L6NGC.hoc  cSTUT_L23NGC.hoc  cSTUT_L5NBC.hoc  cSTUT_L6NGC.hoc  dNAC_L23SBC.hoc  dSTUT_L23BP.hoc  dSTUT_L2SBC.hoc  dSTUT_L4BP.hoc  dSTUT_L5BP.hoc
jl_tests/: jl_model_tests.ipynb
julia_environment/: Manifest.toml  Project.toml
legacy_mod/: README.md
mod/: MemUsage.mod  ProbAMPANMDA_EMS.mod  ProbGABAAB_EMS.mod  SonataReportHelper.mod  SonataReports.mod
multiscale_run/: __init__.py  bloodflow_manager.py  cli.py  config.py  connection_manager.py  metabolism_manager.py  metabolism_utils.py  neurodamus_manager.py  neurodamus_utils.py  preprocessor.py  printer.py  reporter.py  simulation.py  steps_manager.py  steps_utils.py  utils.py
pytests/: test_metabolism_utils.py  test_steps_utils.py  test_utils.py
steps_meshes/: README.md
tests/: test_dualrun.py  test_triplerun.py
(+200 files in other folders)
