[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "wheel",
]

[tool.setuptools]
packages = ["multiscale_run"]

[tool.setuptools_scm]

[project]
name = "multiscale_run"
authors = [
    {name = "Blue Brain Project, EPFL", email = "bbp.opensource@epfl.ch" }
]
description = "Orchestrator for multiscale brain simulations"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "bluepysnap",
    "diffeqpy",
    "gmsh",
    "jinja2",
    "julia",
    "libsonata",
    "mpi4py",
    "numpy",
    "pandas",
    "psutil",
    "scipy",
    "tqdm",
    "pyyaml",
]
dynamic = ["version"]

[project.scripts]
multiscale-run = "multiscale_run.cli:main"
