[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "wheel",
]

[tool.setuptools]
packages = [
    "multiscale_run",
    "multiscale_run.data",
    "multiscale_run.data.config",
    "multiscale_run.data.config.rat_sscxS1HL_V10_all_valid_cells",
    "multiscale_run.data.config.rat_sscxS1HL_V6",
    "multiscale_run.data.metabolismndam_reduced",
]

[tool.setuptools_scm]

[project]
name = "multiscale_run"
authors = [
    {name = "Blue Brain Project, EPFL", email = "bbp.opensource@epfl.ch" }
]
description = """
    multiscale_run is a Python package to run brain cells simulation at different scales. \
    It orchestrates the coupling between several brain simulators like neuron and \
    steps but also solvers like AstroVascPy for the cerebral blood flow. \
    The package also embeds a Julia solver to simulate the astrocytes activity. \
    """
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "astrovascpy",
    "bluepysnap",
    "diffeqpy",
    "gmsh",
    "jinja2",
    "julia",
    "libsonata",
    "mpi4py",
    "notebook",
    "numpy",
    "pandas",
    "psutil",
    "pyyaml",
    "scipy",
    "tqdm",
    "trimesh",
]
dynamic = ["version"]

[project.scripts]
multiscale-run = "multiscale_run.cli:main"

[project.urls]
Homepage = "https://bbpgitlab.epfl.ch/molsys/multiscale_run"
Source = "ssh://git@bbpgitlab.epfl.ch:molsys/multiscale_run.git"
Tracker = "https://bbpteam.epfl.ch/project/issues/projects/BBPP40"
